# jiig

./: .gitignore  README.md  TODO.md  init.jiig  jiig  jiig-run  jiig.yaml  pyproject.toml
examples/: jiig_loader.py
examples/extool/: jiig.yaml
examples/monolithic/: extool  extool.py
jiig/: __init__.py  _options.py  action_context.py  adapters.py  builtin_tasks.py  builtins.py  constants.py  context.py  decorators.py  field.py  fields.py  hints.py  jiigadmin.py  jiigrun.py  registry.py  runtime.py  runtime_task.py  runtime_tool.py  startup.py  task.py  tool.py  types.py
jiig/context_api/: _common.py  file.py  misc.py  run.py
jiig/contexts/: __init__.py  _file_api.py  _misc_api.py  _run_api.py  _util.py  action.py  context.py  host_context.py  messages.py  runtime.py  runtime_context.py
jiig/driver/: __init__.py  driver.py  driver_field.py  driver_options.py  driver_task.py  driver_types.py
jiig/init/: __init__.py  arguments.py  builtin_tasks.py  driver.py  execution.py  help.py  library_path.py  runtime.py  runtime_tasks.py  startup_main.py  tool.py  venv.py
jiig/internal/: __init__.py  execution.py  task.py
jiig/provisioning/: __init__.py  connections.py  files.py  folders.py  git.py  packages.py  tools.py  (+1 more)
tasks/: create.py  help.py  ipython.py  pip.py  python.py  venv.py
templates/: task.py.template
test/: test_utility_date_time.py  test_utility_general.py
tests/: test_date_time.py  test_scoped_catalog.py  test_shell_quoting.py  test_utility_date_time.py
tool-template/: (=TOOL_NAME=).template_exe  init.jiig.template  jiigrc.template_dot
(+426 files in other folders)
